--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -1,1 +1,17 @@
+# Example:
+  spark.master                     spark://IP:PORT
+  spark.eventLog.enabled           true
+  spark.eventLog.dir               /tmp/spark-events #directory for temporary log files
+  spark.serializer                 org.apache.spark.serializer.KryoSerializer
+  spark.dynamicAllocation.enabled      true
+  spark.shuffle.service.enabled        true
+  spark.driver.host               172.16.1.1
+  spark.driver.port               7078
+  spark.driver.memory             100G
+  spark.executor.memoryOverhead   2G
+  spark.hadoop.mapreduce.fileoutputcommitter.algorithm.version 2
+  spark.driver.maxResultSize 35G
+  spark.network.timeout     200s
+
+
 
